# 8004-facilitator

./: .env.example  .gitignore  .gitmodules  index.ts  package-lock.json  package.json  x402-erc8004-flow.html
docs/: notes-edited.md  notes.md  x402-erc8004-implementation.md
docs/superpowers/plans/: 2026-05-21-commitment-based-reputation.md
docs/superpowers/specs/: 2026-05-18-x402-erc8004-reputation-design.md  2026-05-21-x402-erc8004-commitment-based-reputation.md
e2e/: README.md  test_x402_payment.py
examples/sepolia-server/: index.ts
naive_implementation/: Makefile  README.md  foundry.toml  main.py  pyproject.toml  test_eip7702.py
naive_implementation/contracts/: EIP7702Test.sol  FeedbackGateway.sol  MockRegistry.sol  MockUSDC.sol
naive_implementation/contracts/interfaces/: IReputationRegistry.sol
naive_implementation/docs/: feedback-attribution.md
naive_implementation/src/: setup.py
naive_implementation/src/agent_server/: __main__.py  app.py
naive_implementation/src/client/: __main__.py  app.py
naive_implementation/src/facilitator/: __main__.py  app.py
naive_implementation/src/shared/: constants.py
naive_implementation/test/: FeedbackGateway.t.sol  conftest.py  test_e2e.py
src/config/: env.ts
src/services/: registerService.ts  reputationService.ts
src/utils/: signers.ts
