[project]
name = "naive-implementation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "x402[evm,fastapi,httpx]>=2.10.0",
    "python-dotenv>=1.0.0",
    "uvicorn[standard]>=0.30.0",
    "jsonschema>=4.26.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.0.0",
]
